apps/edtheadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edtheadmin-svc
  namespace: apps
  labels:
    app: edtheadmin
spec:
  selector:
    app: edtheadmin
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
